# pipm

./: .cz.json  .cz.toml  .gitignore  .pycrunch-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README  README.md  README.rst  dev-requirements.txt  fabfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tasks.py  test-requirements.txt  tests.py  tox-requirements.txt  tox.ini
.github/workflows/: test.yaml
pipm/: __init__.py  __main__.py  __version__.py  _patched_req_set.py  classes.py  commands.py  file.py  file_utils.py  operations.py  setup_cfg.py
pipm/src/: classes.py  commands.py  file.py  file_utils.py  operations.py  setup_cfg.py
tests/: __init__.py  conftest.py  test_classes.py  test_commands.py  test_file_functions.py  test_main.py  test_operations.py  test_setup_cfg.py
tests/data/: dev-requirements.txt  pkgs.pickle  pkgs.proto2.pickle  requirements.txt  sample-setup.cfg
