[tool.poetry]
name = "pipm"
version = "10.4.3"
description = "Wrapper around pip commands to auto-update requirements file"
authors = ["jnoortheen <jnoortheen@gmail.com>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/jnoortheen/pipm"
homepage = "https://github.com/jnoortheen/pipm"
keywords = ["easy_install", "distutils", "setuptools", "egg", "virtualenv", "requirements"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools"
]

[tool.poetry.dependencies]
python = ">=2.7,!=3.0.*,!=3.1.*,!=3.2.*"
six = "^1.11"
pip = ">=10"

[tool.poetry.dev-dependencies]
pytest = "^3.7"
pytest-cov = "^2.5"
pytest-sugar = "^0.9.1"
pytest-mock = "^1.10"
tox = "^3.2"
pylint = "^2.1"

[tool.poetry.scripts]
pipm = 'pipm:main'
